--- a/MarkomApplication/Views/Unit/_List.cshtml
+++ b/MarkomApplication/Views/Unit/_List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Markom.ViewModel.RoleViewModel>
+﻿@model IEnumerable<Markom.ViewModel.UnitViewModel>
 
 <table class="table">
     <tr>
@@ -6,10 +6,10 @@
             No
         </th>
         <th>
-            Role Code
+            Unit Code
         </th>
         <th>
-            Role Name
+            Unit Name
         </th>
         <th>
             Created Date
@@ -23,60 +23,60 @@
     </tr>
     <tbody>
         @{ int counter = 0;
-            
-            }
+
+        }
         @foreach (var item in Model)
         {
             counter++;
-        <tr>
-            <td>
-                @counter
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.name)
-            </td>
-            <td>
-                @item.created_date.ToString("dd/MM/yyyy")
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.created_by)
-            </td>
-            <td>
-                <div class="btn-group btn-group-sm">
-                    <button type="button" class="btn btn-edit" data-id="@item.id" title="Edit">
-                        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+            <tr>
+                <td>
+                    @counter
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.code)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.name)
+                </td>
+                <td>
+                    @item.created_date.ToString("dd/MM/yyyy")
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.created_by)
+                </td>
+                <td>
+                    <div class="btn-group btn-group-sm">
+                        <button type="button" class="btn btn-edit" data-id="@item.id" title="Edit">
+                            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
 
-                    </button>
-                    <button type="button" class="btn btn-delete" data-id="@item.id" title="Delete">
-                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        </button>
+                        <button type="button" class="btn btn-delete" data-id="@item.id" title="Delete">
+                            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 
-                    </button>
-                    <button type="button" class="btn btn-detail" data-id="@item.id" title="Detail">
-                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        </button>
+                        <button type="button" class="btn btn-detail" data-id="@item.id" title="Detail">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 
-                    </button>
+                        </button>
 
-                </div>
-            </td>
-        </tr>
+                    </div>
+                </td>
+            </tr>
         }
     </tbody>
 
 </table>
 
 <script type="text/javascript">
-    
+
     var editName = $("#name").val();
     $(".btn-delete").click(function () {
         $.ajax({
-            url: '@Url.Action("Delete","Role")',
+            url: '@Url.Action("Delete","Unit")',
             type: 'get',
             data: { id: $(this).attr("data-id") },
             success: function (result) {
-                
+
                 $(".modal-title").html("Delete Data");
                 $(".modal-body").html(result);
                 $(".modal").modal("show");
@@ -91,13 +91,12 @@
         var code = currentRow.find("td:eq(1)").text();
         var name = currentRow.find("td:eq(2)").text();
         $.ajax({
-            url: '@Url.Action("Edit","Role")',
+            url: '@Url.Action("Edit","Unit")',
             type: 'get',
             data: { id: $(this).attr("data-id") },
             success: function (result) {
                 
-
-                $(".modal-title").html("Edit Role - " + name + " (" + code + ")");
+                $(".modal-title").html("Edit Code - " + name + " (" + code + ")");
                 $(".modal-body").html(result);
                 $(".modal").modal("show");
 
@@ -111,13 +110,12 @@
         var code = currentRow.find("td:eq(1)").text();
         var name = currentRow.find("td:eq(2)").text();
         $.ajax({
-            url: '@Url.Action("Detail","Role")',
+            url: '@Url.Action("Detail","Unit")',
             type: 'get',
             data: { id: $(this).attr("data-id") },
             success: function (result) {
-                
 
-                $(".modal-title").html("View Role - " + name + " (" + code + ")");
+                $(".modal-title").html("View Unit - " + name + " (" + code + ")");
                 $(".modal-body").html(result);
                 $(".modal").modal("show");
 
