--- a/MarkomApplication/Views/Unit/_Create.cshtml
+++ b/MarkomApplication/Views/Unit/_Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Markom.ViewModel.RoleViewModel
+﻿@model Markom.ViewModel.UnitViewModel
 
 @Scripts.Render("~/bundles/jqueryval")
 
 
 
-@using (Html.BeginForm("Edit", "Role", FormMethod.Post, new { id = "form-edit", name = "form-edit" }))
+@using (Html.BeginForm("Create", "Unit", FormMethod.Post, new { id = "form-create", name = "form-create" }))
 {
     @Html.AntiForgeryToken()
     <style>
@@ -16,11 +16,10 @@
     <div class="form-horizontal">
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
         <div class="form-group">
             <div class="col-md-offset-1">
                 * Role Code
-                @Html.EditorFor(model => model.code, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                @Html.EditorFor(model => model.code, new { htmlAttributes = new { @class = "form-control", @placeholder = "Auto Generated", @disabled = "disabled" } })
             </div>
         </div>
 
@@ -38,7 +37,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-1">
-                * Description
+                 Description
                 @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
             </div>
             <div class="col-md-offset-3">
@@ -53,7 +52,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-7">
-                <input type="submit" value="Update" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
                 <button type="button" class="btn btn-warning btn-batal">Cancel</button>
 
             </div>
@@ -65,7 +64,7 @@
 <script type="text/javascript">
 
 
-    $("#form-edit").submit(function () {
+    $("#form-create").submit(function () {
 
         $.ajax({
             url: this.action,
@@ -74,11 +73,11 @@
             success: function (result) {
 
                 if (result.success) {
-                    var notif = '@Session["EditCode"].ToString()';
+                    var notif = '@Session["code"].ToString()';
                     //alert("Save Successfull!");
                     $(".modal").modal("hide");
                     GetList();
-                    $("#notif").html("<b>Data Updated!!!</b> Data Role has been updated!");//mulai stack....
+                    $("#notif").html("<b>Data Saved!!!</b> New Unit has been add with code <b>" + notif+"</b>");
 
                 }
 
