--- a/MarkomApplication/Views/Unit/_Edit.cshtml
+++ b/MarkomApplication/Views/Unit/_Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model Markom.ViewModel.RoleViewModel
+﻿@model Markom.ViewModel.UnitViewModel
 
 @Scripts.Render("~/bundles/jqueryval")
 
 
 
-@using (Html.BeginForm("Edit", "Role", FormMethod.Post, new { id = "form-edit", name = "form-edit" }))
+@using (Html.BeginForm("Edit", "Unit", FormMethod.Post, new { id = "form-edit", name = "form-edit" }))
 {
     @Html.AntiForgeryToken()
     <style>
@@ -19,14 +19,14 @@
         @Html.HiddenFor(model => model.id)
         <div class="form-group">
             <div class="col-md-offset-1">
-                * Role Code
+                * Unit Code
                 @Html.EditorFor(model => model.code, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-1">
-                * Role Name
+                * Unit Name
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
 
             </div>
@@ -38,7 +38,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-1">
-                * Description
+                 Description
                 @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
             </div>
             <div class="col-md-offset-3">
@@ -78,7 +78,7 @@
                     //alert("Save Successfull!");
                     $(".modal").modal("hide");
                     GetList();
-                    $("#notif").html("<b>Data Updated!!!</b> Data Role has been updated!");//mulai stack....
+                    $("#notif").html("<b>Data Updated!!!</b> Data Unit has been updated!");
 
                 }
 
@@ -96,6 +96,7 @@
 
     });
 </script>
+
 
 
 
