--- a/MarkomApplication/Views/Product/_Create.cshtml
+++ b/MarkomApplication/Views/Product/_Create.cshtml
@@ -1,16 +1,18 @@
-﻿@model Markom.ViewModel.RoleViewModel
+﻿@model Markom.ViewModel.ProductViewModel
 
 @Scripts.Render("~/bundles/jqueryval")
 
 
 
-@using (Html.BeginForm("Create", "Role", FormMethod.Post, new { id = "form-create", name = "form-create" }))
+@using (Html.BeginForm("Create", "Product", FormMethod.Post, new { id = "form-create", name = "form-create" }))
 {
     @Html.AntiForgeryToken()
     <style>
-        .form-control{
-            display:inline
+        .form-control {
+            display: inline
+
         }
+        
     </style>
 
     <div class="form-horizontal">
@@ -18,35 +20,48 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             <div class="col-md-offset-1">
-                * Role Code
-                @Html.EditorFor(model => model.code, new { htmlAttributes = new { @class = "form-control", @placeholder = "Auto Generated", @disabled = "disabled" } })
-             </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        * Product Code
+                    </div>
+                    <div class="col-md-7">
+                        @Html.EditorFor(model => model.code, new { htmlAttributes = new { @class = "form-control", @placeholder = "Auto Generated", @disabled = "disabled" } })
+                    </div>
+                </div>
+                
+               
+            </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-1">
-                * Role Name
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="row">
+                    <div class="col-md-4">* Product Name</div>
+                    <div class="col-md-7">@Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })</div>
+                </div>
                 
-                
+
             </div>
-            <div class="col-md-offset-3">
+            <div class="col-md-offset-5">
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-                
+
             </div>
-            
+
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-1">
-                * Description
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="row">
+                    <div class="col-md-4">Description</div>
+                    <div class="col-md-7">@Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })</div>
+                </div>
+
             </div>
             <div class="col-md-offset-3">
                 @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
-            
-        </div>                          
+
+        </div>
 
 
 
@@ -56,7 +71,7 @@
             <div class="col-md-offset-7">
                 <input type="submit" value="Save" class="btn btn-primary" />
                 <button type="button" class="btn btn-warning btn-batal">Cancel</button>
-                
+
             </div>
         </div>
     </div>
@@ -66,24 +81,24 @@
 
 
     $("#form-create").submit(function () {
-        
+
         $.ajax({
             url: this.action,
             type: this.method,
             data: $(this).serialize(),
-            success: function (result) {               
-                
+            success: function (result) {
+
                 if (result.success) {
                     var notif = '@Session["code"].ToString()';
                     //alert("Save Successfull!");
                     $(".modal").modal("hide");
                     GetList();
-                    $("#notif").html("<b>Data Saved!!!</b> New Role has been add with code <b>" + notif+"</b>");//mulai stack....
-                                       
+                    $("#notif").html("<b>Data Saved!!!</b> New product has been add with code <b>" + notif+"</b>");//mulai stack....
+
                 }
-                
+
                 else {
-                    
+
                     //alert(result.message);
                 }
             }
@@ -93,8 +108,9 @@
 
     $(".btn-batal").on("click", function () {
         $(".modal").modal("hide");
-        
+
     });
 </script>
+
 
 
